--- a/MovieRecommenderSystem.ipynb
+++ b/MovieRecommenderSystem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+TXIVp6EDhvT06M0UiVWz",
+      "authorship_tag": "ABX9TyOUH/jgx+2TgJCsEynzXF6W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
       ],
       "metadata": {
         "id": "Bv07DIvGvuwU",
-        "outputId": "fe545c70-64de-4c09-b36b-38226bd1951a",
+        "outputId": "31caa286-e8f5-4ddf-9227-7a9da65edc49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
@@ -69,9 +69,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-f7ec1017-70b8-4ef7-99d1-765467b492cb\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-116978b7-f0a2-44d3-acbd-95750b4b842f\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-f7ec1017-70b8-4ef7-99d1-765467b492cb\">\n",
+              "     <output id=\"result-116978b7-f0a2-44d3-acbd-95750b4b842f\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -297,7 +297,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X5Z-Ge47HboN",
-        "outputId": "f0e3dbd9-9754-4a73-ce09-f29c9f55fb58"
+        "outputId": "e0d3b9f2-72aa-4129-ef5e-d365c94fa935"
       },
       "execution_count": 3,
       "outputs": [
@@ -306,8 +306,8 @@
           "name": "stdout",
           "text": [
             "Downloading the-movies-dataset.zip to /content\n",
-            " 92% 209M/228M [00:01<00:00, 209MB/s]\n",
-            "100% 228M/228M [00:01<00:00, 196MB/s]\n"
+            " 99% 226M/228M [00:02<00:00, 167MB/s]\n",
+            "100% 228M/228M [00:02<00:00, 86.9MB/s]\n"
           ]
         }
       ]
@@ -322,7 +322,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3a9faf2b-d8be-458d-8e3b-85f21f0b4b76"
+        "outputId": "750adbc3-00da-413e-ae80-10ecd17a8ed1"
       },
       "execution_count": 4,
       "outputs": [
@@ -345,6 +345,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Content Base"
+      ],
+      "metadata": {
+        "id": "1mcWMwCt9Qcf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Create a high-quality dataset suitable for training a clustering model."
       ],
       "metadata": {
@@ -360,18 +369,18 @@
       ],
       "metadata": {
         "id": "hfd8aGPMHz4f",
-        "outputId": "c55f6873-8afd-476b-8df4-c4c573e61b69",
+        "outputId": "4f59b91c-74bc-4d90-e086-f7910c1f6c87",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-6-e4b7c0ebe1d6>:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "<ipython-input-5-e4b7c0ebe1d6>:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  df = pd.read_csv('/content/the_movies_dataset/movies_metadata.csv')\n"
           ]
         }
@@ -380,7 +389,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "removing some"
+        "We are removing certain features that are not suitable for our training model."
       ],
       "metadata": {
         "id": "CswhMf1MTfS0"
@@ -388,9 +397,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df = df.drop(['budget', 'homepage', 'id', 'imdb_id', 'overview', 'poster_path', 'revenue', 'tagline'], axis=1)"
+      ],
       "metadata": {
         "id": "dj57RaLyTePZ"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OESg9mMpuQXp"
       },
       "execution_count": null,
       "outputs": []
