--- a/app.ipynb
+++ b/app.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWAx7EZ7XKRvA2bF5/06xy",
+      "authorship_tag": "ABX9TyORDpIU22dF9Nx2xuFdKI5o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -365,15 +365,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "efg4hxPTMPcD",
-        "outputId": "160aa18c-3a81-46b6-e5d9-4f25232e554d"
+        "outputId": "244fa68e-ea01-4a26-e2dc-1455df4bf3a1"
       },
-      "execution_count": 1,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-1-5950206d3575>:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "<ipython-input-24-5950206d3575>:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  df1 = pd.read_csv('/content/the_movies_dataset/movies_metadata.csv')\n"
           ]
         }
@@ -395,7 +395,7 @@
       "metadata": {
         "id": "Ngi3ckQfM-tk"
       },
-      "execution_count": 2,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -406,7 +406,7 @@
       "metadata": {
         "id": "o_c1V_oqQpfQ"
       },
-      "execution_count": 3,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -419,9 +419,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6X6hqJwfyR5U",
-        "outputId": "3cf62a9e-81de-4ce2-c560-f68685f6ae75"
+        "outputId": "5c68390a-830f-4728-c9f3-a9523d156544"
       },
-      "execution_count": 4,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +447,7 @@
       "metadata": {
         "id": "5QHCb-xuzxQJ"
       },
-      "execution_count": 5,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -461,7 +461,7 @@
       "metadata": {
         "id": "Ul9y6m90zzZM"
       },
-      "execution_count": 6,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -499,7 +499,7 @@
       "metadata": {
         "id": "2d3AXV1Zz4OG"
       },
-      "execution_count": 7,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -519,7 +519,7 @@
       "metadata": {
         "id": "zjFnUka9-9tO"
       },
-      "execution_count": 10,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -530,7 +530,33 @@
       "metadata": {
         "id": "Jj9fznHI_BFi"
       },
-      "execution_count": 11,
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def scale_vote_average(x):\n",
+        "    return x / 10.0  # Scale the values by dividing by 10.0\n",
+        "df2['vote_average_scaled'] = df2['vote_average'].apply(scale_vote_average)\n"
+      ],
+      "metadata": {
+        "id": "caOSLrivCrOb"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def scale_vote_count(x):\n",
+        "    return np.log(1 + x)  # Apply a logarithmic transformation to the values\n",
+        "df2['vote_count_scaled'] = df2['vote_count'].apply(scale_vote_count)\n"
+      ],
+      "metadata": {
+        "id": "GJ8NTpSoCuFs"
+      },
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -546,7 +572,7 @@
       "metadata": {
         "id": "OmF6_6MXK205"
       },
-      "execution_count": 12,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -560,20 +586,20 @@
       "metadata": {
         "id": "elrWCg5az828"
       },
-      "execution_count": 13,
+      "execution_count": 36,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def create_soup(x):\n",
-        "    return ' '.join(x['keywords']) + ' ' + ' '.join(x['cast']) + ' ' + x['director'] + ' ' + ' '.join(x['genres']) + ' ' + ' '.join(x['production_companies']) + ' ' + str(x['popularity_scaled'])\n",
+        "    return ' '.join(x['keywords']) + ' ' + ' '.join(x['cast']) + ' ' + x['director'] + ' ' + ' '.join(x['genres']) + ' ' + ' '.join(x['production_companies']) + ' ' + str(x['popularity_scaled']) + ' ' + str(x['vote_average_scaled']) + ' ' + str(x['vote_count_scaled'])\n",
         "df2['soup'] = df2.apply(create_soup, axis=1)"
       ],
       "metadata": {
         "id": "cEE6vV_5z_Kl"
       },
-      "execution_count": 14,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -586,7 +612,7 @@
       "metadata": {
         "id": "UL5UkVmo0BbH"
       },
-      "execution_count": 15,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -603,7 +629,7 @@
       "metadata": {
         "id": "MWNJyUEX0D7b"
       },
-      "execution_count": 16,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -618,7 +644,7 @@
       "metadata": {
         "id": "F_A8a2eS0F6U"
       },
-      "execution_count": 17,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -641,7 +667,7 @@
       "metadata": {
         "id": "JY3ZRR3j0JTN"
       },
-      "execution_count": 18,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -655,29 +681,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kCE1gR4-x72Y",
-        "outputId": "79ccaece-3926-4196-cfa9-d1dd01417282"
+        "outputId": "f0d42b10-6097-489f-b1ee-1da11e506f7f"
       },
-      "execution_count": 19,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "24171                          Boom!\n",
-              "38630       And Then There Were None\n",
-              "38933              Giovanni's Island\n",
-              "44485                Planet Earth II\n",
-              "39365          The Angry Birds Movie\n",
-              "41501      Under The Sign Of Scorpio\n",
-              "17215                Love & Savagery\n",
-              "11888                  The Condemned\n",
-              "39769                    The Sea Bat\n",
-              "21856    Princess Protection Program\n",
+              "42448                  Music Land\n",
+              "18807                Love Wrecked\n",
+              "8254              Robinson Crusoe\n",
+              "44485             Planet Earth II\n",
+              "28952                     Mr. Pip\n",
+              "15614    The Island of Dr. Moreau\n",
+              "17296          Eye of the Dolphin\n",
+              "1164                 Mediterraneo\n",
               "Name: title, dtype: object"
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 42
         }
       ]
     },
