--- a/App.ipynb
+++ b/App.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7KzUngxwqxMMVrcgA5j3X",
+      "authorship_tag": "ABX9TyP82Fs2cKYXLsiysYC5LKtV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Alirezarahhmati/Movie_Recommender_System/blob/Develop/App.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Recommendatoin System"
+      ],
+      "metadata": {
+        "id": "vhQJH8Ij4uTy"
+      }
     },
     {
       "cell_type": "code",
@@ -354,6 +363,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Overview Based"
+      ],
+      "metadata": {
+        "id": "5d5yCTWzua3u"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -365,7 +383,7 @@
       "metadata": {
         "id": "CNmSMKKGSQxL"
       },
-      "execution_count": 3,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -378,15 +396,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-_X80ZwynuNE",
-        "outputId": "a2b92237-f79a-4bfc-c7ad-73d494dffc3f"
+        "outputId": "fd85b111-b336-4f6f-9375-5ad87a4fcf77"
       },
-      "execution_count": 4,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-4-7b9ba854191d>:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "<ipython-input-102-7b9ba854191d>:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  df2 = pd.read_csv('/content/the_movies_dataset/movies_metadata.csv')\n"
           ]
         }
@@ -401,7 +419,7 @@
       "metadata": {
         "id": "zlLsDERcnW86"
       },
-      "execution_count": 5,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -413,7 +431,7 @@
       "metadata": {
         "id": "V1xHy3KbnnXk"
       },
-      "execution_count": 6,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -425,7 +443,7 @@
       "metadata": {
         "id": "2BTB36NHn78I"
       },
-      "execution_count": 7,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -444,7 +462,7 @@
       "metadata": {
         "id": "rinlmhRGqlXh"
       },
-      "execution_count": 8,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -459,7 +477,7 @@
       "metadata": {
         "id": "eNgjcZ01qmCD"
       },
-      "execution_count": 9,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -471,14 +489,14 @@
       "metadata": {
         "id": "uBXYy6ZUrZKf"
       },
-      "execution_count": 12,
+      "execution_count": 108,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Function that takes in movie title as input and outputs most similar movies\n",
-        "def get_recommendations(title, top_k=10):\n",
+        "def get_recommendations(title, top_k):\n",
         "    # Get the index of the movie that matches the title\n",
         "    idx = indices[title]\n",
         "\n",
@@ -488,8 +506,8 @@
         "    # Query the LSH forest to get approximate nearest neighbors\n",
         "    nearest_neighbors = forest.query(query_minhash, top_k)\n",
         "\n",
-        "    # Get the movie indices of the nearest neighbors\n",
-        "    movie_indices = [int(nn) for nn in nearest_neighbors]\n",
+        "    # Get the movie indices of the nearest neighbors, excluding the input movie\n",
+        "    movie_indices = [int(nn) for nn in nearest_neighbors if nn != idx][:top_k]\n",
         "\n",
         "    # Return the top k most similar movies\n",
         "    return df2['title'].iloc[movie_indices]"
@@ -497,53 +515,88 @@
       "metadata": {
         "id": "-kCP0ocKqo-p"
       },
-      "execution_count": 25,
+      "execution_count": 117,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "get_recommendations('Interstellar')"
+        "get_recommendations('Shutter Island', 3)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UUc5WaOcqweA",
-        "outputId": "1f0d0ec5-31fa-4def-8224-3864d2f6e400"
+        "outputId": "a4dc452e-a335-4ec5-b821-410556e6c97f"
       },
-      "execution_count": 26,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "11649            Babylon 5: The Gathering\n",
-              "11651             Meshes of the Afternoon\n",
-              "1322        Star Trek: The Motion Picture\n",
-              "8780                        Capricorn One\n",
-              "37970       The Visit: An Alien Encounter\n",
-              "7446                Babylon 5: Thirdspace\n",
-              "30839    Scooby-Doo! Moon Monster Madness\n",
-              "1432         Turbo: A Power Rangers Movie\n",
-              "26940                      Heavens Above!\n",
-              "22879                        Interstellar\n",
+              "5715                          Scanners\n",
+              "34779    Doctor Who: The Runaway Bride\n",
               "Name: title, dtype: object"
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 124
         }
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Final Recommends"
+      ],
       "metadata": {
-        "id": "9r1NuBlwrH4-"
+        "id": "mClNGCh8xUVb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def final_recommends(movies, length):\n",
+        "    res = []\n",
+        "    for i in range(length):\n",
+        "        recommendations = get_recommendations(movies[i], top_k=3)\n",
+        "        if len(recommendations) > 0:\n",
+        "            res.append(recommendations.iloc[0])\n",
+        "    return res"
+      ],
+      "metadata": {
+        "id": "ymlMRA110dU1"
       },
-      "execution_count": null,
+      "execution_count": 130,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "final_recommends([\"Interstellar\", \"Shutter Island\", \"Inception\"], 3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OzsFWxfM2Ujx",
+        "outputId": "3e95df46-717d-4e49-c3fb-eccb47a57fda"
+      },
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Babylon 5: The Gathering', 'Scanners', 'The Golden Fortress']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 131
+        }
+      ]
     }
   ]
 }
