--- a/App.ipynb
+++ b/App.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP82Fs2cKYXLsiysYC5LKtV",
+      "authorship_tag": "ABX9TyP1u8K9gOqpkd6ubzC4Lkx/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -558,43 +558,62 @@
     {
       "cell_type": "code",
       "source": [
-        "def final_recommends(movies, length):\n",
-        "    res = []\n",
-        "    for i in range(length):\n",
-        "        recommendations = get_recommendations(movies[i], top_k=3)\n",
-        "        if len(recommendations) > 0:\n",
-        "            res.append(recommendations.iloc[0])\n",
-        "    return res"
+        "import random"
       ],
       "metadata": {
-        "id": "ymlMRA110dU1"
+        "id": "8AAyofay51Dl"
       },
-      "execution_count": 130,
+      "execution_count": 132,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "final_recommends([\"Interstellar\", \"Shutter Island\", \"Inception\"], 3)"
+        "def final_recommends(movies, result_number):\n",
+        "    res = []\n",
+        "    for i in range(len(movies)):\n",
+        "        recommendations = get_recommendations(movies[i], top_k=10)\n",
+        "        if len(recommendations) > 0:\n",
+        "          for j in range(9):\n",
+        "            res.append(recommendations.iloc[j])\n",
+        "\n",
+        "    random.shuffle(res)\n",
+        "\n",
+        "    return res[:result_number]"
+      ],
+      "metadata": {
+        "id": "ymlMRA110dU1"
+      },
+      "execution_count": 156,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "final_recommends([\"Interstellar\", \"Shutter Island\", \"Inception\"], 5)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OzsFWxfM2Ujx",
-        "outputId": "3e95df46-717d-4e49-c3fb-eccb47a57fda"
+        "outputId": "3752f11a-eb50-41d2-c044-662bdc810aed"
       },
-      "execution_count": 131,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['Babylon 5: The Gathering', 'Scanners', 'The Golden Fortress']"
+              "['Turbo: A Power Rangers Movie',\n",
+              " 'High and Dizzy',\n",
+              " 'Brains Repaired',\n",
+              " 'Doctor Who: The Runaway Bride',\n",
+              " 'Star Trek: The Motion Picture']"
             ]
           },
           "metadata": {},
-          "execution_count": 131
+          "execution_count": 158
         }
       ]
     }
